--- a/public/locales/de.json
+++ b/public/locales/de.json
@@ -72,5 +72,8 @@
   "tokenAddress": "Tokenadresse",
   "label": "Label",
   "decimals": "Dezimalstellen",
-  "enterTokenCont": "Tokenadresse eingeben um fortzufahren"
+  "enterTokenCont": "Tokenadresse eingeben um fortzufahren",
+  "warningToken": "Warnung: Dieses Token",
+  "notInT2CR": "ist auf dem T²CR nicht vorhanden",
+  "missingERC20Badge": "hat nicht das ERC20 Abzeichen"
 }
