--- a/public/locales/ru.json
+++ b/public/locales/ru.json
@@ -71,5 +71,8 @@
   "tokenAddress": "Адрес токена",
   "label": "Название",
   "decimals": "Десятичное значение",
-  "enterTokenCont": "Чтобы продолжить, введите адрес токена"
+  "enterTokenCont": "Чтобы продолжить, введите адрес токена",
+  "warningToken": "Предупреждение: этот токен",
+  "notInT2CR": "отсутствует на T²CR",
+  "missingERC20Badge": "не имеет значка ERC20"
 }
