--- a/public/locales/es-US.json
+++ b/public/locales/es-US.json
@@ -71,5 +71,8 @@
 	"tokenAddress": "Dirección de Token",
 	"label": "Etiqueta",
 	"decimals": "Decimales",
-	"enterTokenCont": "Ingrese una dirección de token para continuar"
+	"enterTokenCont": "Ingrese una dirección de token para continuar",
+	"warningToken": "Advertencia: Este token",
+  	"notInT2CR": "no está presente en el T²CR",
+  	"missingERC20Badge": "no tiene la insignia ERC20"
 }
