--- a/public/locales/zh-CN.json
+++ b/public/locales/zh-CN.json
@@ -71,5 +71,8 @@
   "tokenAddress": "通证地址",
   "label": "通证符号",
   "decimals": "小数位数",
-  "enterTokenCont": "输入通证地址并继续"
+  "enterTokenCont": "输入通证地址并继续",
+  "warningToken": "警告：此令牌",
+  "notInT2CR": "T²CR上没有",
+  "missingERC20Badge": "没有ERC20徽章"
 }
