--- a/public/locales/zh-TW.json
+++ b/public/locales/zh-TW.json
@@ -71,5 +71,8 @@
   "tokenAddress": "代幣地址",
   "label": "代幣符號",
   "decimals": "小數位數",
-  "enterTokenCont": "輸入代幣地址"
+  "enterTokenCont": "輸入代幣地址",
+  "warningToken": "警告：此令牌",
+  "notInT2CR": "T²CR上没有",
+  "missingERC20Badge": "没有ERC20徽章"
 }
