--- a/public/locales/zh-CN.json
+++ b/public/locales/zh-CN.json
@@ -73,6 +73,6 @@
   "decimals": "小数位数",
   "enterTokenCont": "输入通证地址并继续",
   "warningToken": "警告：此令牌",
-  "notInT2CR": "T²CR上没有",
-  "missingERC20Badge": "没有ERC20徽章"
+  "notInT2CR": "未列入T²CR",
+  "missingERC20Badge": "未获取ERC20徽章"
 }
