--- a/public/locales/ro.json
+++ b/public/locales/ro.json
@@ -74,5 +74,6 @@
   "enterTokenCont": "Setează o adresă de token pentru a continua",
   "warningToken": "Atenție: Acest jeton",
   "notInT2CR": "nu este prezent pe T²CR",
-  "missingERC20Badge": "nu are insigna ERC20"
+  "missingERC20Badge": "nu are insigna ERC20",
+  "liquidity": "Lichiditate"
 }
