--- a/public/locales/en.json
+++ b/public/locales/en.json
@@ -83,5 +83,6 @@
   "priceChange": "This trade will cause the price to change by",
   "warningToken": "Warning: This token",
   "notInT2CR": "is not present on the T²CR",
-  "missingERC20Badge": "doesn't have the ERC20 badge"
+  "missingERC20Badge": "doesn't have the ERC20 badge",
+  "liquidity": "Liquidity"
 }
