--- a/public/locales/zh-CN.json
+++ b/public/locales/zh-CN.json
@@ -74,5 +74,6 @@
   "enterTokenCont": "输入通证地址并继续",
   "warningToken": "警告：此令牌",
   "notInT2CR": "未列入T²CR",
-  "missingERC20Badge": "未获取ERC20徽章"
+  "missingERC20Badge": "未获取ERC20徽章",
+  "liquidity": "流动性"
 }
