feat: display marginal price when swapping or sending, closes #2

--- a/public/locales/de.json
+++ b/public/locales/de.json
@@ -76,5 +76,6 @@
   "warningToken": "Warnung: Dieses Token",
   "notInT2CR": "ist auf dem T²CR nicht vorhanden",
   "missingERC20Badge": "hat nicht das ERC20 Abzeichen",
-  "liquidity": "Liquidität"
+  "liquidity": "Liquidität",
+  "marginalPrice": "Grenzpreis"
 }
