--- a/public/locales/es-AR.json
+++ b/public/locales/es-AR.json
@@ -75,5 +75,6 @@
 	"warningToken": "Advertencia: Este token",
   	"notInT2CR": "no está presente en el T²CR",
 	"missingERC20Badge": "no tiene la insignia ERC20",
-	"liquidity": "Liquidez"
+	"liquidity": "Liquidez",
+	"marginalPrice": "Precio marginal"
 }
