--- a/public/locales/zh-CN.json
+++ b/public/locales/zh-CN.json
@@ -75,5 +75,6 @@
   "warningToken": "警告：此令牌",
   "notInT2CR": "未列入T²CR",
   "missingERC20Badge": "未获取ERC20徽章",
-  "liquidity": "流动性"
+  "liquidity": "流动性",
+  "marginalPrice": "边际价格"
 }
