fix: handle missing decimal places on old contracts and zero liquidity

--- a/public/locales/de.json
+++ b/public/locales/de.json
@@ -77,5 +77,6 @@
   "notInT2CR": "ist auf dem T²CR nicht vorhanden",
   "missingERC20Badge": "hat nicht das ERC20 Abzeichen",
   "liquidity": "Liquidität",
-  "marginalPrice": "Grenzpreis"
+  "marginalPrice": "Grenzpreis",
+  "missingDecimalPlaces": "Dieses Token kann nicht auf uniswap.ninja gehandelt werden, da in seinem Vertrag die Anzahl der Dezimalstellen nicht veröffentlicht wird."
 }
