--- a/public/locales/es-US.json
+++ b/public/locales/es-US.json
@@ -76,5 +76,6 @@
   	"notInT2CR": "no está presente en el T²CR",
 	"missingERC20Badge": "no tiene la insignia ERC20",
 	"liquidity": "Liquidez",
-	"marginalPrice": "Precio marginal"
+	"marginalPrice": "Precio marginal",
+	"missingDecimalPlaces": "Acest simbol nu poate fi tranzacționat pe uniswap.ninja deoarece contractul său nu publică numărul de zecimale."
 }
