--- a/public/locales/ro.json
+++ b/public/locales/ro.json
@@ -76,5 +76,6 @@
   "notInT2CR": "nu este prezent pe T²CR",
   "missingERC20Badge": "nu are insigna ERC20",
   "liquidity": "Lichiditate",
-  "marginalPrice": "Preț marginal"
+  "marginalPrice": "Preț marginal",
+  "missingDecimalPlaces": "Acest simbol nu poate fi tranzacționat pe uniswap.ninja deoarece contractul său nu publică numărul de zecimale."
 }
