--- a/public/locales/zh-TW.json
+++ b/public/locales/zh-TW.json
@@ -76,5 +76,6 @@
   "notInT2CR": "未列入T²CR",
   "missingERC20Badge": "未获取ERC20徽章",
   "liquidity": "流动性",
-  "marginalPrice": "边际价格"
+  "marginalPrice": "边际价格",
+  "missingDecimalPlaces": "此令牌无法在uniswap.ninja上交易，因为其合约不会公布小数位数。"
 }
