--- a/public/locales/es-AR.json
+++ b/public/locales/es-AR.json
@@ -77,5 +77,6 @@
 	"missingERC20Badge": "no tiene la insignia ERC20",
 	"liquidity": "Liquidez",
 	"marginalPrice": "Precio marginal",
-	"missingDecimalPlaces": "Este token no se puede intercambiar en uniswap.ninja porque su contrato no publica el número de lugares decimales."
+	"missingDecimalPlaces": "Este token no se puede intercambiar en uniswap.ninja porque su contrato no publica el número de lugares decimales.",
+	"addAToken": "Agregar un token"
 }
