--- a/public/locales/ru.json
+++ b/public/locales/ru.json
@@ -77,5 +77,6 @@
   "missingERC20Badge": "не имеет значка ERC20",
   "liquidity": "ликвидности",
   "marginalPrice": "Предельная цена",
-  "missingDecimalPlaces": "Этот токен нельзя обменять на uniswap.ninja, потому что его контракт не публикует количество знаков после запятой."
+  "missingDecimalPlaces": "Этот токен нельзя обменять на uniswap.ninja, потому что его контракт не публикует количество знаков после запятой.",
+  "addAToken": "Добавить токен"
 }
