--- a/public/locales/ro.json
+++ b/public/locales/ro.json
@@ -77,5 +77,6 @@
   "missingERC20Badge": "nu are insigna ERC20",
   "liquidity": "Lichiditate",
   "marginalPrice": "Preț marginal",
-  "missingDecimalPlaces": "Acest simbol nu poate fi tranzacționat pe uniswap.ninja deoarece contractul său nu publică numărul de zecimale."
+  "missingDecimalPlaces": "Acest simbol nu poate fi tranzacționat pe uniswap.ninja deoarece contractul său nu publică numărul de zecimale.",
+  "addAToken": "Adăugați un jeton"
 }
