--- a/public/locales/zh-TW.json
+++ b/public/locales/zh-TW.json
@@ -77,5 +77,6 @@
   "missingERC20Badge": "未获取ERC20徽章",
   "liquidity": "流动性",
   "marginalPrice": "边际价格",
-  "missingDecimalPlaces": "此通证无法在uniswap.ninja上交易，因为其合约未公布小数位数。"
+  "missingDecimalPlaces": "此通证无法在uniswap.ninja上交易，因为其合约未公布小数位数。",
+  "addAToken": "添加令牌"
 }
